Add the parameter check

--- a/package.json
+++ b/package.json
@@ -8,5 +8,9 @@
   "private": true,
   "bin": {
     "create-express-ts-app": "./index.js"
+  },
+  "dependencies": {
+    "commander": "^2.13.0",
+    "yargs": "^10.1.1"
   }
 }
